@@ -16,7 +16,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- $Id: dnssec-keygen.docbook,v 1.8 2004/06/03 02:22:31 marka Exp $ -->
+<!-- $Id: dnssec-keygen.docbook,v 1.9 2004/06/11 01:12:40 marka Exp $ -->
 
 <refentry>
   <refentryinfo>
@@ -45,6 +45,7 @@
       <arg><option>-f <replaceable class="parameter">flag</replaceable></option></arg>
       <arg><option>-g <replaceable class="parameter">generator</replaceable></option></arg>
       <arg><option>-h</option></arg>
+      <arg><option>-k</option></arg>
       <arg><option>-p <replaceable class="parameter">protocol</replaceable></option></arg>
       <arg><option>-r <replaceable class="parameter">randomdev</replaceable></option></arg>
       <arg><option>-s <replaceable class="parameter">strength</replaceable></option></arg>
@@ -58,7 +59,7 @@
     <title>DESCRIPTION</title>
     <para>
         <command>dnssec-keygen</command> generates keys for DNSSEC
-	(Secure DNS), as defined in RFC 2535.  It can also generate
+	(Secure DNS), as defined in RFC 2535 and RFC &lt;TBA\&gt;.  It can also generate
 	keys for use with TSIG (Transaction Signatures), as
 	defined in RFC 2845.
     </para>
@@ -73,13 +74,16 @@
 	<listitem>
 	  <para>
 	      Selects the cryptographic algorithm.  The value of
-	      <option>algorithm</option> must be one of RSAMD5 or RSA,
+	      <option>algorithm</option> must be one of RSAMD5 (RSA) or RSASHA1,
 	      DSA, DH (Diffie Hellman), or HMAC-MD5.  These values
 	      are case insensitive.
 	  </para>
 	  <para>
-	      Note that for DNSSEC, DSA is a mandatory to implement algorithm,
-	      and RSA is recommended.  For TSIG, HMAC-MD5 is mandatory.
+	      Note 1: that for DNSSEC, RSASHA1 is a mandatory to implement algorithm,
+	      and DSA is recommended.  For TSIG, HMAC-MD5 is mandatory.
+	  </para>
+	  <para>
+	      Note 2: HMAC-MD5 and DH automatically set the -k flag.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -89,7 +93,7 @@
 	<listitem>
 	  <para>
 	       Specifies the number of bits in the key.  The choice of key
-	       size depends on the algorithm used.  RSA keys must be between
+	       size depends on the algorithm used.  RSAMD5 / RSASHA1 keys must be between
 	       512 and 2048 bits.  Diffie Hellman keys must be between
 	       128 and 4096 bits.  DSA keys must be between 512 and 1024
 	       bits and an exact multiple of 64.  HMAC-MD5 keys must be
@@ -104,8 +108,8 @@
 	  <para>
 	       Specifies the owner type of the key.  The value of
 	       <option>nametype</option> must either be ZONE (for a DNSSEC
-	       zone key), HOST or ENTITY (for a key associated with a host),
-	       or USER (for a key associated with a user).  These values are
+	       zone key (KEY/DNSKEY)), HOST or ENTITY (for a key associated with a host (KEY)),
+	       USER (for a key associated with a user(KEY)) or OTHER (DNSKEY).  These values are
 	       case insensitive.
 	  </para>
 	</listitem>
@@ -125,7 +129,7 @@
         <term>-e</term>
 	<listitem>
 	  <para>
-	       If generating an RSA key, use a large exponent.
+	       If generating an RSAMD5/RSASHA1 key, use a large exponent.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -134,8 +138,8 @@
         <term>-f <replaceable class="parameter">flag</replaceable></term>
 	<listitem>
 	  <para>
-		Set the specified flag in the flag field of the key record.
-		The only recognized flag is KSK (Key Signing Key).
+		Set the specified flag in the flag field of the KEY/DNSKEY record.
+		The only recognized flag is KSK (Key Signing Key) DNSKEY.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -158,6 +162,15 @@
 	  <para>
 	       Prints a short summary of the options and arguments to
 	       <command>dnssec-keygen</command>.
+	  </para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>-k</term>
+	<listitem>
+	  <para>
+	       Generate KEY records rather than DNSKEY records.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -302,14 +315,6 @@
   <refsect1>
     <title>SEE ALSO</title>
     <para>
-      <citerefentry>
-        <refentrytitle>dnssec-makekeyset</refentrytitle>
-	<manvolnum>8</manvolnum>
-      </citerefentry>,
-      <citerefentry>
-        <refentrytitle>dnssec-signkey</refentrytitle>
-	<manvolnum>8</manvolnum>
-      </citerefentry>,
       <citerefentry>
         <refentrytitle>dnssec-signzone</refentrytitle>
 	<manvolnum>8</manvolnum>
