@@ -16,7 +16,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- $Id: dnssec-signzone.docbook,v 1.11 2004/06/03 02:22:32 marka Exp $ -->
+<!-- $Id: dnssec-signzone.docbook,v 1.12 2004/06/11 01:12:40 marka Exp $ -->
 
 <refentry>
   <refentryinfo>
@@ -63,14 +63,12 @@
   <refsect1>
     <title>DESCRIPTION</title>
     <para>
-        <command>dnssec-signzone</command> signs a zone.  It generates NSEC
-	and RRSIG records and produces a signed version of the zone.  If there
-	is a <filename>signedkey</filename> file from the zone's parent,
-	the parent's signatures will be incorporated into the generated
-	signed zone file.  The security status of delegations from the
-        signed zone (that is, whether the child zones are secure or not) is
-        determined by the presence or absence of a
-	<filename>signedkey</filename> file for each child zone.
+        <command>dnssec-signzone</command> signs a zone.  It generates
+	NSEC and RRSIG records and produces a signed version of the
+	zone. The security status of delegations from the signed zone
+	(that is, whether the child zones are secure or not) is
+	determined by the presence or absence of a
+	<filename>keyset</filename> file for each child zone.
     </para>
   </refsect1>
 
@@ -120,7 +118,7 @@
         <term>-d <replaceable class="parameter">directory</replaceable></term>
 	<listitem>
 	  <para>
-	       Look for <filename>signedkey</filename> files in
+	       Look for <filename>keyset</filename> files in
 	       <option>directory</option> as the directory 
 	  </para>
 	</listitem>
@@ -317,8 +315,8 @@
         The following command signs the <userinput>example.com</userinput>
 	zone with the DSA key generated in the <command>dnssec-keygen</command>
 	man page.  The zone's keys must be in the zone.  If there are
-	<filename>signedkey</filename> files associated with this zone
-	or any child zones, they must be in the current directory.
+	<filename>keyset</filename> files associated with child zones,
+	they must be in the current directory.
 	<userinput>example.com</userinput>, the following command would be
 	issued:
     </para>
